--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,20 @@ h6 {
   font-weight: var(--main-font-weight);
 }
 
+::-webkit-scrollbar {
+  width: 7px;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: var(--secondary-color);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--primary-color);
+}
+
 body {
   display: flex;
   flex-direction: column;
